[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Storeapi"
version = "0.0.1"
authors = [
  { name="chaitany", email="chitany@example.com" },
]
description = "A small project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChaitanyaDevnikar/Store_api.git"
"Bug Tracker" = "https://github.com/ChaitanyaDevnikar/Store_api.git"